mbus-ffi/go/internal/cgo/include/modbus_rs_go.h

typedef struct MbusDnTcpClient MbusDnTcpClient;
/**
 * Opaque handle to an asynchronous Modbus TCP client.
 *
 * Created by [`mbus_dn_tcp_client_new`] and destroyed by
 * [`mbus_dn_tcp_client_free`].  Always passed by raw pointer over FFI.
 *
 * The struct itself is heap-allocated (`Box::into_raw`); `Arc` lets the
 * shared Tokio runtime hold a clone for the lifetime of any in-flight
 * request without preventing destruction once the C# `SafeHandle` runs
 * `_free`.
 */
typedef struct MbusDnTcpClient MbusDnTcpClient;
/**
 * Status code returned by every `mbus_dn_*` function.
 *
 * Numerically identical to [`crate::c::error::MbusStatusCode`].
 */
typedef enum MbusStatusCode MbusDnStatus;
/**
 * Creates a new async TCP client targeting `host:port`.
 *
 * `host` must be a NUL-terminated UTF-8 string.  The returned pointer
 * must eventually be released with [`mbus_dn_tcp_client_free`].  Returns
 * `null` if `host` is null, not valid UTF-8, or the underlying constructor
 * fails (for example because no Tokio runtime could be started).
 *
 * # Safety
 *
 * `host` must point to a valid NUL-terminated string for the duration of
 * this call.
 */
struct MbusDnTcpClient *mbus_dn_tcp_client_new(const char *host, uint16_t port);
/**
 * Releases an `MbusDnTcpClient` previously returned from
 * [`mbus_dn_tcp_client_new`].
 *
 * Drops the underlying `AsyncTcpClient`, which signals its background
 * Tokio task to exit.  No-op if `handle` is null.  Safe to call exactly
 * once per handle.
 *
 * # Safety
 *
 * `handle` must be either null or a pointer previously returned from
 * [`mbus_dn_tcp_client_new`] that has not already been freed.
 */
void mbus_dn_tcp_client_free(struct MbusDnTcpClient *handle);
/**
 * Establishes the TCP transport connection.
 *
 * Blocks the calling thread until the connection completes or fails.
 *
 * # Safety
 *
 * `handle` must be a non-null pointer previously returned from
 * [`mbus_dn_tcp_client_new`] and still alive.
 */
MbusDnStatus mbus_dn_tcp_client_connect(struct MbusDnTcpClient *handle);
/**
 * Closes the TCP transport gracefully.
 *
 * Drains any in-flight or queued requests with `ConnectionClosed`.  After
 * this call the client can be reconnected with
 * [`mbus_dn_tcp_client_connect`].
 *
 * # Safety
 *
 * See [`mbus_dn_tcp_client_connect`].
 */
MbusDnStatus mbus_dn_tcp_client_disconnect(struct MbusDnTcpClient *handle);
/**
 * Sets a per-request timeout in milliseconds; `0` disables the timeout.
 *
 * # Safety
 *
 * See [`mbus_dn_tcp_client_connect`].
 */
MbusDnStatus mbus_dn_tcp_client_set_request_timeout_ms(struct MbusDnTcpClient *handle,
                                                       uint64_t timeout_ms);
/**
 * Returns `1` when there are requests in flight awaiting a response, `0`
 * otherwise; returns `0` when `handle` is null.
 *
 * # Safety
 *
 * See [`mbus_dn_tcp_client_connect`].
 */
uint8_t mbus_dn_tcp_client_has_pending_requests(struct MbusDnTcpClient *handle);
/**
 * Reads `quantity` holding registers (FC03) starting at `address` from
 * the given `unit_id` and copies them, in declaration order, into the
 * caller-supplied `out_buf` of length `out_buf_len` (in `u16` elements).
 *
 * On success writes the number of registers actually read into
 * `out_count` (which equals `quantity`) and returns `MbusOk`.
 *
 * Returns `MbusErrBufferTooSmall` if `out_buf_len < quantity`.
 *
 * # Safety
 *
 * * `handle` must be a valid client pointer.
 * * `out_buf` must point to writable storage for at least `out_buf_len`
 *   `u16` values.
 * * `out_count` must point to a writable `u16`.
 */
MbusDnStatus mbus_dn_tcp_client_read_holding_registers(struct MbusDnTcpClient *handle,
                                                       uint8_t unit_id,
                                                       uint16_t address,
                                                       uint16_t quantity,
                                                       uint16_t *out_buf,
                                                       uint16_t out_buf_len,
                                                       uint16_t *out_count);
/**
 * Writes a single holding register (FC06).
 *
 * On success, writes the echoed `(address, value)` to `out_address` and
 * `out_value` if those pointers are non-null.
 *
 * # Safety
 *
 * * `handle` must be a valid client pointer.
 * * `out_address` and `out_value` may be null; if non-null they must
 *   point to writable `u16` storage.
 */
MbusDnStatus mbus_dn_tcp_client_write_single_register(struct MbusDnTcpClient *handle,
                                                      uint8_t unit_id,
                                                      uint16_t address,
                                                      uint16_t value,
                                                      uint16_t *out_address,
                                                      uint16_t *out_value);
/**
 * Writes `quantity` holding registers (FC16) starting at `address`.
 *
 * `values` must point to `quantity` `u16` values in declaration order.
 *
 * On success, writes the echoed `(starting_address, quantity)` to
 * `out_address` and `out_quantity` if non-null.
 *
 * # Safety
 *
 * * `handle` must be a valid client pointer.
 * * `values` must point to at least `quantity` readable `u16` values.
 * * `out_address` and `out_quantity` may be null.
 */
MbusDnStatus mbus_dn_tcp_client_write_multiple_registers(struct MbusDnTcpClient *handle,
                                                         uint8_t unit_id,
                                                         uint16_t address,
                                                         const uint16_t *values,
                                                         uint16_t quantity,
                                                         uint16_t *out_address,
                                                         uint16_t *out_quantity);